# webm-streamer

./: .gitignore  Cargo.toml  biome.json
examples/: next_cluster.rs  parse_error.rs  reseek.rs  reset_pos.rs  std_stream.rs  stream_parser.rs  writter_debug.rs
src/: lib.rs  main.rs
src/axum_range/: file.rs  mod.rs  stream.rs
src/jrec/: mod.rs  recording.rs  slow_reader.rs  streaming.rs  utils.rs  ws.rs
src/jrec/streaming/: blocking.rs  mod.rs  realtime.rs  std_stream.rs
src/jrec/webm/: mod.rs  stream_parser.rs
src/transport/: copy_bidirectional.rs  mod.rs  ws.rs
src/utils/: file.rs  mod.rs  recording_manager.rs  state.rs
web-player/: package-lock.json  package.json
web-player/src/: App.css  StreamingVideoPlayer.tsx  TestVideoPlayer.tsx  VideoApp.tsx  VideoPlayer.tsx  WebSocketVideoPlayer.tsx  main.tsx  streaming.ts
web-recorder/: package-lock.json  package.json
web-recorder/src/: App.css  App.tsx  drawer.ts  main.tsx  recorder.ts
